# control-workflows

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
src/control_workflows/: __init__.py
src/control_workflows/examples/: __init__.py
src/control_workflows/examples/continuous_time_models/: __init__.py  matlab_example.py
src/control_workflows/examples/control_system_modeling/: __init__.py  interconnect.py  matlab_example.py
src/control_workflows/examples/dc_motor_control/: __init__.py  lqr.py  matlab_example.py  model.py
src/control_workflows/examples/delay_to_z/: __init__.py  matlab_example.py
src/control_workflows/examples/kalman_filtering/: __init__.py  matlab_example.py  steady_state.py  time_varying.py
src/control_workflows/examples/time_delay/: __init__.py  matlab_example.py
src/control_workflows/lti/: __init__.py  analysis.py  conversions.py  delay.py  design.py  frequency.py  interconnect.py  reduction.py  response.py  state_space.py  transfer_function.py  zpk.py
tests/: test_delay.py  test_frequency.py
